# prDiffWalk

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTING.md  PUBLISHING.md
scripts/: verify_core.py
src/pr_diff_walk/: __init__.py  base.py  cli.py  schemas.py  service.py
src/pr_diff_walk/git_clients/: __init__.py  base.py  github.py  gitlab.py  token_resolver.py
src/pr_diff_walk/integrations/: __init__.py  c_lang.py  common.py  cpp.py  csharp.py  css.py  dart.py  golang.py  html.py  java.py  javascript.py  kotlin.py  php.py  python.py  rust.py  swift.py  typescript.py  zig.py
tests/: conftest.py  test_cli.py  test_git_clients.py  test_schemas.py  test_service.py
tests/integrations/: test_base.py  test_languages.py  test_registry.py
