[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-diff-walk"
version = "0.1.0"
description = "PR dependency chain analysis with multi-language ecosystem support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pr-diff-walk = "pr_diff_walk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_diff_walk"]

[tool.hatch.build.targets.sdist]
include = ["src/pr_diff_walk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/pr_diff_walk --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src/pr_diff_walk"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"
