[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-diff-walk"
version = "0.1.0"
description = "PR dependency chain analysis with multi-language ecosystem support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["pull-request", "dependency", "analysis", "github", "gitlab", "merge-request"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/felixLandlord/prDiffWalk"
Documentation = "https://github.com/felixLandlord/prDiffWalk#readme"
Repository = "https://github.com/felixLandlord/prDiffWalk"
Issues = "https://github.com/felixLandlord/prDiffWalk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pr-diff-walk = "pr_diff_walk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_diff_walk"]

[tool.hatch.build.targets.sdist]
include = ["src/pr_diff_walk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/pr_diff_walk --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src/pr_diff_walk"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"
